# DevNet

./: .gitignore  MANIFEST.in  ReadMe.md  networks.json  pyproject.toml
Developer/: GOOD_FIRST_ISSUES.md
Documentation/: DIN-workflow.md  GettingStarted.md  Model-workflow.md  aggregators.md  auditors.md  clients.md  common.md  dindao.md  manifest.md  model-owner.md  setup.md
abis/: DINTaskAuditor.json  DINTaskCoordinator.json
bashscripts/: runG0.sh  runGG0.sh
cache_model_0/: manifest.json  requirements.txt
dincli/: CliDOC.md  README.md  __init__.py  aggregator.py  auditor.py  config.py  dindao.py  log.py  main.py  model_owner.py  modelowner.py  pyproject.toml  requirements.txt  system.py  task.py  utils.py
dincli/abis/: DINModelRegistry.json  DINTaskAuditor.json  DinCoordinator.json  DinToken.json  DinValidatorStake.json
dincli/bashscripts/: runG0.sh  runGG0.sh
dincli/cli/: aggregator.py  auditor.py  client.py  context.py  contract_utils.py  core.py  dindao.py  ipfs.py  log.py  modelowner.py  system.py  task.py  utils.py
dincli/cli/modelownerd/: aggregation.py  auditor_batches.py  deploy.py  gi.py  lms.py  lms_evaluation.py  model.py  setup.py  slash.py
dincli/config/: din_info.json  networks.py
dincli/services/: aggregator.py  auditor.py  cid_utils.py  client.py  ipfs.py  modelowner.py  runtime.py
fastapi/: requirements.txt
foundry/: .gitignore  anvil.sh  foundry.toml  package-lock.json
frontend/: package-lock.json
hardhat/: hardhat.config.ts  package-lock.json  package.json  test-output.txt
scripts/: ipfs_upload.py
services/: model.py  (+1 more)
(+73 files in other folders)
